@@ -26,6 +26,8 @@ Fixes
     (Issue #2723, PR #2815)
   * empty_atomgroup.select_atoms('name *') now returns an empty
     AtomGroup instead of TypeError (Issue #2765)
+  * TRZReader now checks `n_atoms` on reading. (Issue #2817, PR #2820)
+  * TRZWriter now writes `n_atoms` to the file. (Issue #2817, PR #2820)
   * rdf.InterRDF_s density keyword documented and now gives correct results for
     density=True; the keyword was available since 0.19.0 but with incorrect
     semantics and not documented and did not produce correct results (Issue
